fix: analyzer fixes